src/Assets/Styles/Header.scss
.header{
  .header-content{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0px 8px;
    .header-title{
     display: flex;
     align-items: center;
     justify-content: center;
     ion-icon{
      margin-right: 12px;
      font-size: 2.5rem;
      color: #EF233C;
     }
    }
    form > .input-form, button{
      padding: 6px;
    }
    .input-form{
      font-family: inherit;
      border: none;
      border-top-left-radius: 5px;
      border-bottom-left-radius: 5px;
    }
    button{
      font-family: inherit;
      background-color: #ef233c;
      color: #fff;
      font-weight: 400;
      border-top-right-radius: 5px;
      border-bottom-right-radius: 5px;
      &:hover{
        background-color: #d30729;
        cursor: pointer;
      }
    }
  }
}

//Media queries
@media screen and (max-width: 450px){
 .header{
  .header-content{
   flex-direction: column;
   margin-bottom: 10px;
   h1{
    margin-bottom: 0px;
   }
   .input-form{
    width: 210px;
   }
  }
 }
}

